--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lazyload": "^2.0.0-rc.2",
     "vant": "^2.7.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
